add day 2 efforts

--- a/week1/day2 EXERCISE.ipynb
+++ b/week1/day2 EXERCISE.ipynb
@@ -214,9 +214,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f5100f5-0b05-4afa-9ac2-725081352f7c",
+   "metadata": {},
+   "source": [
+    "[Made new file with the soln here.](day1-openai_calling_ollama.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402d5686-4e76-4110-b65a-b3906c35c0a4",
+   "id": "0a5d7966-ffc7-4735-8666-3cc38c6efbd4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
