add function to make openai call with user, system inputs and streaming if desired

--- a/week1/week1 EXERCISE.ipynb
+++ b/week1/week1 EXERCISE.ipynb
@@ -236,48 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "63eb9002-0117-4f38-a6d5-e3a193c81fb8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Sure! Here’s a more concise version of your message, retaining its meaning while enhancing clarity:\n",
-       "\n",
-       "---\n",
-       "\n",
-       "**Subject: Seeking Advice on Transitioning My Skills to Client Work**\n",
-       "\n",
-       "Hi Wesley,\n",
-       "\n",
-       "Thank you for your insights on learning. After leaving university, I quickly realized how essential it is for me to continue growing. My journey has led me to explore both technical and non-technical fields, ultimately landing me at a crossroads. I've spent the past year reflecting on my goals, and I'm focused on building something of my own—either by starting a software startup or by joining a strong team to create something impactful.\n",
-       "\n",
-       "Since December, I’ve dedicated myself to mastering Python, particularly since I've recognized its role in AI. I've worked with LangChain, the ChatGPT API, and recently built a company brochure generator that curates information based on a homepage URL using AI.\n",
-       "\n",
-       "I'd love your advice on how to effectively productionize my projects. Specifically, how do I package my skills to attract clients? Did you identify a pain point and create a solution, or did you start by understanding a client's needs before developing a solution? Any resources or tips you could share would be greatly appreciated!\n",
-       "\n",
-       "Looking forward to your thoughts.\n",
-       "\n",
-       "Best,  \n",
-       "[Your Name]  \n",
-       "\n",
-       "--- \n",
-       "\n",
-       "Feel free to modify any part of it according to your preferences!"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "system_prompt = \"you're helping me more concisely get my points across without loosing meaning so that the person i am talking to understands better and wants to give me advice on my challenge.  You'll need to help me with what my key point is that I'm trying to make and then rewrite to better achieve that aim and all in a professional, friendly way.  Respond in markdown\"\n",
+    "system_prompt = \" ... and reply in Markdown.\"\n",
     "user_prompt = \"\"\"\n",
-    "Thanks Wesley, you're right on the learning front - when I left university I thought I was done with learning and quickly discovered I'd be very bored in a job with no learning.  Now I very much enjoy learning but I do struggle to pick one path and stay on it long enough sometimes!  I kept switching between technical and non-technical and ending up somewhere in the middle.. but.. I've reflected over the last year and thought about where I'd like to get to -> build something of my own either by 1. starting my own software startup, or 2. joining a strong team and being a big part of achieving something amazing. So that led me to taking up Python properly for the first time in December.  Although I've done unofficial python projects since before I went to university I never realised it could be a path for me until I realised that it's a core part of AI.   here's some more context on me: So far I've focussed on python and am now starting to work with LangChain and common ChatGPT API calls and also running llama3.2 locally with ollama with most recent project being a company brochure generator using the homepage URL as a starting point and then finding all other links on the page, then using ai to decide which are useful and then another ai to build the brochure from the useful links!  The thing i'd really like to understand and Laura tells me you have some great experience of is how to productionise what you do - that is how do you polish what you offer into a package and get that to clients - perhaps there is somewhere you suggest on a website or otherwise to pick up a first piece of work and how to go about it.  I back my skills, but I can't quite understand how i'd present what i can do to a customer, did you pick a particular pain point and build a solution to it or did you start by researching that and getting a company/person to sign up to needing that solution from you first?\"\n",
     "\"\"\"\n",
     "\n",
     "def ask_chatgpt(user_prompt, system_prompt=None, enable_streaming=True):\n",
