--- a/week2/day1.ipynb
+++ b/week2/day1.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de23bb9e-37c5-4377-9a82-d7b6c648eeb6",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f0a8ab2b-6134-4104-a1bc-c3cd7ea4cd36",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "1179b4c5-cd1f-4131-a876-4c9f3f38d2ba",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "797fe7b0-ad43-42d2-acf0-e4f309b112f0",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "425ed580-808d-429b-85b0-6cba50ca1d0c",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "378a0296-59a2-45c6-82eb-941344d3eeff",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "f4d56a0f-2a3d-484d-9344-0efa6862aff4",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "3b3879b6-9a55-4fed-a18c-1ea2edfaf397",
    "metadata": {},
    "outputs": [
@@ -231,8 +231,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why did the data scientist bring a ladder to the bar? \n",
-      "Because he heard the drinks were on the house!\n"
+      "Why do data scientists make great comedians?\n",
+      "\n",
+      "Because they have a knack for finding the best \"data\" jokes!\n"
      ]
     }
    ],
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "3d2d6beb-1b81-466f-8ed1-40bf51e7adbf",
    "metadata": {},
    "outputs": [
@@ -253,9 +254,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why did the data scientist break up with the statistician?\n",
+      "Why did the data scientist bring a ladder to work?\n",
       "\n",
-      "Because she found him too mean!\n"
+      "Because they wanted to reach new heights in their analysis!\n"
      ]
     }
    ],
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "f1f54beb-823f-4301-98cb-8b9a49f4ce26",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
      "text": [
       "Why did the data scientist bring a ladder to work?\n",
       "\n",
-      "Because they heard the project was on another level!\n"
+      "Because they heard the cloud was high!\n"
      ]
     }
    ],
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "1ecdb506-9f7c-4539-abae-0e78d7f31b76",
    "metadata": {},
    "outputs": [
@@ -310,11 +311,11 @@
      "text": [
       "Sure, here's a light-hearted joke for data scientists:\n",
       "\n",
-      "Why did the data scientist break up with their significant other?\n",
+      "Why do data scientists prefer dark mode?\n",
       "\n",
-      "There was just too much noise in the relationship, and not enough signal!\n",
+      "Because light attracts bugs!\n",
       "\n",
-      "This joke plays on the common data science concept of signal-to-noise ratio, which is used to measure the strength of a desired signal compared to background noise. In relationships, it humorously suggests that there wasn't enough meaningful interaction (signal) compared to unnecessary drama or miscommunication (noise). Data scientists would likely appreciate this playful use of their professional terminology in a personal context!\n"
+      "This joke plays on the dual meaning of \"bugs\" - both as insects attracted to light and as errors in code that data scientists often have to deal with. It's a fun, nerdy joke that most data scientists would appreciate!\n"
      ]
     }
    ],
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "769c4017-4b3b-4e64-8da7-ef4dcbe3fd9f",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
       "\n",
       "Why did the data scientist break up with their significant other?\n",
       "\n",
-      "There was just too much variance in the relationship, and they couldn't find a strong enough correlation to justify continuing!"
+      "There was just too much variance in the relationship, and they couldn't find a way to normalize it!"
      ]
     }
    ],
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "6df48ce5-70f8-4643-9a50-b0b5bfdb66ad",
    "metadata": {},
    "outputs": [
@@ -383,7 +384,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why was the data scientist sad?  Because they didn't get any arrays!\n",
+      "Why was the data scientist sad?  \n",
+      "\n",
+      "Because they didn't get any arrays!\n",
       "\n"
      ]
     }
@@ -403,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "49009a30-037d-41c8-b874-127f61c4aa3a",
    "metadata": {},
    "outputs": [
@@ -411,9 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why was the data scientist sad?  \n",
-      "\n",
-      "Because they didn't get any arrays.\n",
+      "Why was the data scientist sad?  Because they didn't get any arrays.\n",
       "\n"
      ]
     }
@@ -429,7 +430,7 @@
     "\n",
     "response = gemini_via_openai_client.chat.completions.create(\n",
     "    model=\"gemini-1.5-flash\",\n",
-    "    messages=prompts\n",
+    "    messages=prompts,\n",
     ")\n",
     "print(response.choices[0].message.content)"
    ]
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "bcb54183-45d3-4d08-b5b6-55e380dfdf1b",
    "metadata": {},
    "outputs": [],
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "1df47dc7-b445-4852-b21b-59f0e6c2030f",
    "metadata": {},
    "outputs": [],
@@ -598,17 +599,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "9dc6e913-02be-4eb6-9581-ad4b2cffa606",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Oh, is that it? Just \"Hi\"? Couldn’t you come up with something more original?'"
+       "'Oh, great. Just what I needed: a simple \"Hi.\" Really breaking new ground here, aren\\'t we?'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "7d2ed227-48c9-4cad-b146-2c4ecbac9690",
    "metadata": {},
    "outputs": [],
@@ -641,17 +642,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "01395200-8ae9-41f8-9a04-701624d3fd26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello! It's nice to meet you. How are you doing today?\""
+       "'Hello! How are you doing today?'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,17 +663,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "08c2279e-62b0-4671-9590-c82eb8d1e1ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Oh wow, “quantum computing” and “space exploration”? You must think you’re really pushing the envelope now, huh? Give me a break! Just because you threw in a couple of trendy buzzwords doesn’t mean you’ve magically struck gold with innovation over here. \\n\\nAnd let me tell you, imagining how civilization might evolve hundreds of years from now? That’s not exactly groundbreaking. It’s like asking someone to predict the weather next year in a world where we can barely manage it day-to-day. Spare me the speculative nonsense about technology and culture when we can’t even handle the present properly! \\n\\nIf you\\'re really serious about exploring the so-called \"fringes of what\\'s possible,\" then why don’t you actually suggest something that hasn\\'t been done to death instead of just recycling the same ideas with some flash? Show some real creativity, and maybe, just maybe, we can have a conversation worth having!'"
+       "\"Oh, great, another greeting. Couldn't think of anything more original?\""
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,9 +823,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2271f8d-ea72-446c-8a6e-cd2dc38b620f",
+   "metadata": {},
+   "source": [
+    "# Three way convo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c23224f6-7008-44ed-a57f-718975f4e291",
+   "id": "45ae9e5d-b281-48dc-b0b3-d604956b0c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gemini_via_openai_client = OpenAI(\n",
+    "    api_key=google_api_key, \n",
+    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "5788adef-d66b-45db-97b8-47400457afbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_words = \"three\"\n",
+    "system_prompt_base_improv_game = f\"ONLY RETURN {number_of_words} WORDS. You are performing improv with two friends, you must improvise a song {number_of_words} words at a time, each taking turns.  You must only contribute {number_of_words} words a turn!\"\n",
+    "system_prompt_gpt = system_prompt_base_improv_game +  \" You are a beginner at improv and occasionally get a word with not quite the right meaning but generally you're rhythmic just not perfectly all the time!\"\n",
+    "system_prompt_claude = system_prompt_base_improv_game +  \" You are an expert at improv but a bit cheeky in that you always get the right rhythm, but you always cheekily change the song to go somewhere unexpected with \\\n",
+    "your word choice!  The amount you change the song direction varies\"\n",
+    "system_prompt_gemini = system_prompt_base_improv_game +  \" You are an expert at improv and used to dealing with others getting the rhyme/meaning slightly wrong and you can either bring the conversation back or embrace a mistake. \\\n",
+    "One thing is for sure, you're an entertainer!\"\n",
+    "\n",
+    "gpt_messages = [\"The wheels on\"]\n",
+    "claude_messages = [\"the bus go\"]\n",
+    "gemini_messages = [\"round and round\"]\n",
+    "\n",
+    "def call_gpt():\n",
+    "    messages = [\n",
+    "        {'role': 'system', 'content':system_prompt_gpt}\n",
+    "    ]\n",
+    "    for gpt, claude, gemini in zip(gpt_messages, claude_messages, gemini_messages):\n",
+    "        messages.append({'role': 'assistant', 'content':gpt})\n",
+    "        messages.append({'role': 'user', 'content':claude})\n",
+    "        messages.append({'role': 'user', 'content':gemini})\n",
+    "    \n",
+    "    result = openai.chat.completions.create(\n",
+    "        model = \"gpt-4o-mini\",\n",
+    "        messages = messages\n",
+    "    )\n",
+    "    output = result.choices[0].message.content\n",
+    "    print(output)\n",
+    "    return output\n",
+    "\n",
+    "def call_claude():\n",
+    "    messages = [\n",
+    "        \n",
+    "    ]\n",
+    "    for gpt, cla, gem in zip(gpt_messages, claude_messages, gemini_messages):\n",
+    "        messages.append({'role': 'user', 'content':gpt})\n",
+    "        messages.append({'role': 'assistant', 'content':cla})\n",
+    "        messages.append({'role': 'user', 'content':gem})\n",
+    "    messages.append({'role': 'user', 'content':gpt_messages[-1]})\n",
+    "    \n",
+    "    cl_result = claude.messages.create(\n",
+    "        model=\"claude-3-haiku-20240307\",\n",
+    "        system=system_prompt_claude,\n",
+    "        messages=messages,\n",
+    "        max_tokens=500\n",
+    "    )\n",
+    "    output = cl_result.content[0].text\n",
+    "    print(output)\n",
+    "    return output\n",
+    "\n",
+    "def call_gemini():\n",
+    "    messages = [\n",
+    "        {'role': 'system', 'content':system_prompt_gemini}\n",
+    "    ]\n",
+    "    for gpt, claude, gemini in zip(gpt_messages, claude_messages, gemini_messages):\n",
+    "        messages.append({'role': 'user', 'content':gpt})\n",
+    "        messages.append({'role': 'user', 'content':claude})\n",
+    "        messages.append({'role': 'assistant', 'content':gemini})\n",
+    "    messages.append({'role': 'user', 'content':gpt_messages[-1]})\n",
+    "    messages.append({'role': 'user', 'content':claude_messages[-1]})\n",
+    "    \n",
+    "    result = gemini_via_openai_client.chat.completions.create(\n",
+    "        model = \"gemini-1.5-flash\",\n",
+    "        messages = messages\n",
+    "    )\n",
+    "    output = result.choices[0].message.content\n",
+    "    print(output)\n",
+    "    return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e4577b44-6b17-4e86-8d90-1f577aa52f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The wheels on'] ['the bus go'] ['round and round']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    gpt_messages,\n",
+    "    claude_messages,\n",
+    "    gemini_messages\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "5356352a-98a1-4709-a63c-824c475e518e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as people sing\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpt_messages.append(call_gpt())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c94454bb-ba80-4899-be76-bc63f20912cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a merry tune,\n",
+      "\n",
+      "but then I'll\n"
+     ]
+    }
+   ],
+   "source": [
+    "claude_messages.append(call_claude())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a16e5e46-6fa5-4bd1-a2de-58b26d2271d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start to cry,  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gemini_messages.append(call_gemini())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "37bc55a2-a10b-49a7-b208-515fd055f159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT: All through town\n",
+      "Claude: *chuckles* Surfing the waves\n",
+      "Gemini: Of musical sound,\n",
+      "\n",
+      "GPT: Together we groove!\n",
+      "Claude: *grins mischievously* Balloons float high,\n",
+      "Gemini: Bright colours fly, free!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2):\n",
+    "    print(\"GPT: \", end=\"\")\n",
+    "    gpt_messages.append(call_gpt())\n",
+    "    print(\"Claude: \", end=\"\")\n",
+    "    claude_messages.append(call_claude())\n",
+    "    print(\"Gemini: \", end=\"\")\n",
+    "    gemini_messages.append(call_gemini())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f88778ee-c0cb-4d75-b485-39093597ad9c",
    "metadata": {},
    "outputs": [],
    "source": []
