fixed streaming of 3 way conversation

--- a/am_extras/3way-convo.ipynb
+++ b/am_extras/3way-convo.ipynb
@@ -332,6 +332,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ec0b8d6b-9a93-444c-924e-06f8316641d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "for letter in infinite_random_sentences():\n",
+    "    print(letter, end=\"\", flush=True)\n",
+    "    time.sleep(0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "7c71fef0-c4a0-410d-ae7c-d75aca6c2974",
    "metadata": {},
