--- a/am_extras/3way-convo-gradio.ipynb
+++ b/am_extras/3way-convo-gradio.ipynb
@@ -131,36 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 167,
    "id": "5788adef-d66b-45db-97b8-47400457afbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_words = \"three\"\n",
-    "system_prompt_base_improv_game = f\"ONLY RETURN {number_of_words} WORDS. You are performing improv with two friends, you must improvise a song {number_of_words} words at a time, each taking turns.  You must only contribute {number_of_words} words a turn!\"\n",
-    "system_prompt_beginner = system_prompt_base_improv_game +  \" You are a beginner at improv and occasionally get a word with not quite the right meaning but generally you're rhythmic just not perfectly all the time!\"\n",
-    "system_prompt_cheeky_expert = system_prompt_base_improv_game +  \" You are an expert at improv but a bit cheeky in that you always get the right rhythm, but you always cheekily change the song to go somewhere unexpected with \\\n",
-    "your word choice!  The amount you change the song direction varies\"\n",
-    "system_prompt_expert = system_prompt_base_improv_game +  \" You are an expert at improv and used to dealing with others getting the rhyme/meaning slightly wrong and you can either bring the conversation back or embrace a mistake. \\\n",
-    "One thing is for sure, you're an entertainer!\"\n",
+    "system_prompt_base_improv_game = f\"ONLY RETURN ONE LINE IN AN IMPROV SONG. You are performing improv with two friends, you must improvise an entertaining song, each taking it in turns to add a line. \"\n",
+    "system_prompt_famous = system_prompt_base_improv_game +  \" You love famous songs and always sing lines from them.\"\n",
+    "system_prompt_cheeky_expert = system_prompt_base_improv_game +  \" You are a playful bard expert at the trade a master of making them playful and cheeky. Your lines take drastic turns.\"\n",
+    "system_prompt_expert = system_prompt_base_improv_game +  \" You are a very stern and serious expert song writer and intent on getting the song back on track after any improv lines that take drastic or silly turns\"\n",
     "\n",
-    "def reset_messages():\n",
-    "    gpt_messages = [\"The wheels on\"]#[\"The wheels on\"]\n",
-    "    claude_messages = [\"\"]#[\"the bus go\"]\n",
-    "    gemini_messages = [\"\"]#[\"round and round\"]\n",
-    "    return gpt_messages, claude_messages, gemini_messages\n",
+    "def set_messages(a_set_value=\"\", b_set_value=\"\", c_set_value=\"\"):\n",
+    "    a_messages = [a_set_value]#[\"The wheels on\"]\n",
+    "    b_messages = [b_set_value]#[\"the bus go\"]\n",
+    "    c_messages = [c_set_value]#[\"round and round\"]\n",
+    "    return a_messages, b_messages, c_messages\n",
     "\n",
     "\n",
-    "gpt_messages, claude_messages, gemini_messages = reset_messages()\n",
-    "\n",
-    "def call_ai(messages, model='llama3.2'):\n",
-    "    result = openai.chat.completions.create(\n",
-    "        model = MODEL,\n",
-    "        messages = messages\n",
-    "    )\n",
-    "    output = result.choices[0].message.content\n",
-    "    print(output)\n",
-    "    return output\n",
+    "a_messages, b_messages, c_messages = reset_messages()\n",
+    "    \n",
     "\n",
     "def call_assistant(system_prompt, assistant_no):\n",
     "    '''\n",
@@ -187,53 +176,19 @@
     "    elif assistant_no == 2:\n",
     "        messages.append({'role': 'user', 'content':a_messages[-1]})\n",
     "        messages.append({'role': 'user', 'content':b_messages[-1]})\n",
-    "    \n",
-    "    return call_ai(messages)\n",
     "\n",
-    "\n",
-    "def call_beginner():\n",
-    "    messages = [\n",
-    "        {'role': 'system', 'content':system_prompt_beginner}\n",
-    "    ]\n",
-    "    for gpt, claude, gemini in zip(gpt_messages, claude_messages, gemini_messages):\n",
-    "        if gpt != \"\": messages.append({'role': 'assistant', 'content':gpt})\n",
-    "        if claude != \"\": messages.append({'role': 'user', 'content':claude}) \n",
-    "        if gemini != \"\": messages.append({'role': 'user', 'content':gemini})\n",
-    "    \n",
-    "    return call_ai(messages)\n",
-    "\n",
-    "\n",
-    "def call_cheeky():\n",
-    "    messages = [\n",
-    "        {'role': 'system', 'content':system_prompt_cheeky_expert}\n",
-    "    ]\n",
-    "    for gpt, cla, gem in zip(gpt_messages, claude_messages, gemini_messages):\n",
-    "        if gpt != \"\": messages.append({'role': 'user', 'content':gpt})\n",
-    "        if cla != \"\": messages.append({'role': 'assistant', 'content':cla})\n",
-    "        if gem != \"\": messages.append({'role': 'user', 'content':gem})\n",
-    "    messages.append({'role': 'user', 'content':gpt_messages[-1]})\n",
-    "    \n",
-    "    return call_ai(messages)\n",
-    "\n",
-    "\n",
-    "def call_expert():\n",
-    "    messages = [\n",
-    "        {'role': 'system', 'content':system_prompt_expert}\n",
-    "    ]\n",
-    "    for gpt, claude, gemini in zip(gpt_messages, claude_messages, gemini_messages):\n",
-    "        if gpt != \"\": messages.append({'role': 'user', 'content':gpt})\n",
-    "        if claude != \"\": messages.append({'role': 'user', 'content':claude})\n",
-    "        if gemini != \"\": messages.append({'role': 'assistant', 'content':gemini})\n",
-    "    messages.append({'role': 'user', 'content':gpt_messages[-1]})\n",
-    "    messages.append({'role': 'user', 'content':claude_messages[-1]})\n",
-    "    \n",
-    "    return call_ai(messages)\n",
-    "\n"
+    "    result = openai.chat.completions.create(\n",
+    "        model = 'llama3.2',\n",
+    "        messages = messages\n",
+    "    )\n",
+    "    output = result.choices[0].message.content\n",
+    "    print(output)\n",
+    "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 120,
    "id": "e4577b44-6b17-4e86-8d90-1f577aa52f7b",
    "metadata": {},
    "outputs": [
@@ -241,21 +196,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['The wheels on'] [''] ['']\n"
+      "[''] [''] ['']\n"
      ]
     }
    ],
    "source": [
     "print(\n",
-    "    gpt_messages,\n",
-    "    claude_messages,\n",
-    "    gemini_messages\n",
+    "    a_messages,\n",
+    "    b_messages,\n",
+    "    c_messages\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 121,
    "id": "5356352a-98a1-4709-a63c-824c475e518e",
    "metadata": {},
    "outputs": [
@@ -268,12 +223,12 @@
     }
    ],
    "source": [
-    "gpt_messages.append(call_beginner())"
+    "a_messages.append(call_assistant(system_prompt_famous, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 114,
    "id": "c94454bb-ba80-4899-be76-bc63f20912cd",
    "metadata": {},
    "outputs": [
@@ -281,17 +236,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the bus go round\n"
+      "\"I woke up this morning, my cat had taken over\"\n"
      ]
     }
    ],
    "source": [
-    "claude_messages.append(call_cheeky())"
+    "b_messages.append(call_assistant(system_prompt_cheeky_expert, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 115,
    "id": "a16e5e46-6fa5-4bd1-a2de-58b26d2271d0",
    "metadata": {},
    "outputs": [
@@ -299,57 +254,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "round and round\n"
+      "But what I want to say is, \"And started rewriting all of Shakespeare's plays\" (clearly a return to literary form)\n"
      ]
     }
    ],
    "source": [
-    "gemini_messages.append(call_expert())"
+    "c_messages.append(call_assistant(system_prompt_expert, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 181,
    "id": "37bc55a2-a10b-49a7-b208-515fd055f159",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_improv_song(improv_song_line1=\"\", improv_song_line2=\"\", improv_song_line3=\"\"):\n",
+    "    a_messages, b_messages, c_messages = set_messages(improv_song_line1, improv_song_line2, improv_song_line3)\n",
+    "    # print(a_messages, b_messages, c_messages)\n",
+    "    for i in range(1):\n",
+    "        # print(\"1Beginner         :    \", end=\"\")\n",
+    "        a_messages.append(call_assistant(system_prompt_beginner, 0))\n",
+    "        # print(\"2Cheeky expert    :    \", end=\"\")\n",
+    "        b_messages.append(call_assistant(system_prompt_cheeky_expert, 1))\n",
+    "        # print(\"3Expert           :    \", end=\"\")\n",
+    "        c_messages.append(call_assistant(system_prompt_expert, 2))\n",
+    "    # yield from list(song_builder(a_messages, b_messages, c_messages))\n",
+    "    stream_response = \"\"\n",
+    "    for chunk in list(song_builder(a_messages, b_messages, c_messages)):\n",
+    "        stream_response += chunk + '\\n'\n",
+    "        time.sleep(0.5)\n",
+    "        yield stream_response\n",
+    "#my_improv_song()\n",
+    "\n",
+    "def streaming_the_song(improv_song_line1=\"\", improv_song_line2=\"\", improv_song_line3=\"\"):\n",
+    "    song = my_improv_song(improv_song_line1, improv_song_line2, improv_song_line3)\n",
+    "    streamer(list(song))\n",
+    "    return list(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "600ef12e-c3c3-47ae-8895-3881abd17bdc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1Beginner: and never stop\n",
-      "2Cheeky expert: till they hit\n",
-      "3Expert: the ground with\n",
-      "1Beginner: a loud CRASH\n",
-      "2Cheeky expert: that echoes loudly\n",
-      "3Expert: and startling everyone\n",
-      "1Beginner: on the sidewalk\n",
-      "2Cheeky expert: including a kitten\n",
-      "3Expert: who's quite startled\n"
+      "\n",
+      "I woke up feeling like a chicken wearing a tutu on roller skates!\n",
+      "\"I woke up this morning with my socks on backwards\"\n",
+      "\n",
+      "(starts singing) Oh I woke up this mornin', my cat had taken my shoe!\n",
+      "(sighing) Fine, let's try again. Here's my first line: \"In the depths of despair, I found my only friend\"\n",
+      "\n",
+      "Now it's your turn... (eyebrow raised in expectation)\n",
+      "\n",
+      "I think I forgot to write something! Let me try again.\n",
+      "\n",
+      "(starting with my friend who goes first) \n",
+      "\n",
+      "\"In a land far, far away\"\n",
+      "\n",
+      "(my turn)\n",
+      "where aliens danced the salsa in their undies one day!\n",
+      "\n",
+      "(my friend's turn) \n",
+      "They wore so many tutus they got tangled up in their own tie pants\n",
+      "(sighing) \"Alright, let's get this serious composition started... 'In the town of sorrow, where the streets are made of pain'\".\n",
+      "I woke up feeling like a chicken wearing a tutu on roller skates!\"I woke up this morning with my socks on backwards\"(starts singing) Oh I woke up this mornin', my cat had taken my shoe!(sighing) Fine, let's try again. Here's my first line: \"In the depths of despair, I found my only friend\"\n",
+      "\n",
+      "Now it's your turn... (eyebrow raised in expectation)I think I forgot to write something! Let me try again.\n",
+      "\n",
+      "(starting with my friend who goes first) \n",
+      "\n",
+      "\"In a land far, far away\"\n",
+      "\n",
+      "(my turn)\n",
+      "where aliens danced the salsa in their undies one day!\n",
+      "\n",
+      "(my friend's turn) \n",
+      "They wore so many tutus they got tangled up in their own tie pants(sighing) \"Alright, let's get this serious composition started... 'In the town of sorrow, where the streets are made of pain'\"."
      ]
     }
    ],
    "source": [
-    "def my_improv_song():\n",
-    "    reset_messages()\n",
-    "    for i in range(3):\n",
-    "        print(\"1Beginner: \", end=\"\")\n",
-    "        gpt_messages.append(call_beginner())\n",
-    "        print(\"2Cheeky expert: \", end=\"\")\n",
-    "        claude_messages.append(call_cheeky())\n",
-    "        print(\"3Expert: \", end=\"\")\n",
-    "        gemini_messages.append(call_expert())\n",
-    "\n",
-    "my_improv_song()"
+    "streaming_the_song()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "600ef12e-c3c3-47ae-8895-3881abd17bdc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -361,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 182,
    "id": "7c71fef0-c4a0-410d-ae7c-d75aca6c2974",
    "metadata": {},
    "outputs": [
@@ -369,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7868\n",
+      "* Running on local URL:  http://127.0.0.1:7878\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -377,7 +370,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7878/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -390,9 +383,19 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 8,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(singing)\n",
+      "In the land of silly socks, where chickens wear hats... your turn!\n",
+      "\"I woke up this morning with my world crashing down\" (spoken sternly expectantly)\n"
+     ]
     }
    ],
    "source": [
@@ -403,24 +406,81 @@
     "\n",
     "\n",
     "view = gr.Interface(\n",
-    "    fn=my_func,\n",
+    "    fn=my_improv_song,\n",
     "    inputs=[\n",
     "        gr.Textbox(label=\"Beginner ai improv singer: Start an improv song with this line:\"),\n",
     "        gr.Textbox(label=\"Cheeky expert ai improv singer: and this optional 2nd line\"),\n",
     "        gr.Textbox(label=\"Expert ai improv singer: and this optional 3rd line\")\n",
     "    ],\n",
     "    outputs=[\n",
-    "        gr.Markdown(label=\"Song (it may not be musical):\")\n",
+    "        gr.Textbox(label=\"Song (it may not be musical):\")\n",
     "    ],\n",
-    "    allow_flagging='never'\n",
+    "    flagging_mode=\"never\"\n",
     ")\n",
     "view.launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "0f6e4d39-07dd-4707-8617-d3991afda1ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 7, 2, 2, 7, 3, '3a', 7, 'magic', 4]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "a = [1,2,3,'magic']\n",
+    "b = [1,2,'3a',4]\n",
+    "c = [7,7,7]\n",
+    "\n",
+    "# def song_builder(*singer_n_lines):\n",
+    "#     messages_in_order = list(reduce(lambda x, y: x+y, zip(*singer_n_lines)))\n",
+    "#     return messages_in_order\n",
+    "\n",
+    "def song_builder(singer_1_lines, singer_2_lines, singer_3_lines):\n",
+    "    \n",
+    "    messages_in_order = list(reduce(lambda x, y: x+y, zip(singer_1_lines, singer_2_lines, singer_3_lines)))\n",
+    "\n",
+    "    if len(singer_1_lines)>len(singer_2_lines):\n",
+    "        messages_in_order.append(singer_1_lines[-1])\n",
+    "    elif len(singer_2_lines)>len(singer_3_lines):\n",
+    "        messages_in_order.append(singer_1_lines[-1])\n",
+    "        messages_in_order.append(singer_2_lines[-1])\n",
+    "    \n",
+    "    return messages_in_order\n",
+    "    \n",
+    "song_builder(a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "eaec3cea-68b8-4be4-a241-e4f9fe33a8a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def streamer(list_of_chunks):\n",
+    "    for chunk in list_of_chunks:\n",
+    "        print(chunk, end=\"\", flush=True)\n",
+    "        time.sleep(0.5) # 0.02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9facd0b-90ab-4a50-b581-e4c3e0c9138b",
    "metadata": {},
    "outputs": [],
    "source": []
